[project]
name = "unko"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ftnext", email = "takuyafjp+develop@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "unko:deru"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/unko"]
